# Contract-editor

./: .env.example  .gitignore  .pre-commit-config.yaml  QWEN_PROMPT_TEMPLATE.md  Qwen_context.md  README.md  ci.yaml  heihestom26.html  pyproject.toml  requirements.txt
run/: setup.sh
src/: main.py
src/my_python_ui_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ui/: __init__.py  dashboard.py  navigation.py
