[project]
name = "my-python-ui-app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.25.0",
    "ruff>=0.4.0",
    "black>=24.0",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]